# android-mcp-pro

./: .gitignore  .mcpbignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  manifest.json  pyproject.toml
.claude/: settings.json
.claude/hooks/: rebuild-deep-jar.sh
.claude/rules/: sync-commits.md
.github/workflows/: deploy-pages.yml
docs/: intro.html
docs/superpowers/plans/: 2026-05-28-layout-debugging.md  2026-05-29-jdwp-deep-inspector.md  2026-06-03-device-picker.md
docs/superpowers/specs/: 2026-05-28-layout-debugging-design.md  2026-05-29-jdwp-deep-inspector-design.md  2026-06-03-device-picker-design.md
docs/superpowers/spikes/: Spike.java  Spike2.java  Spike3_v1.java
github-pages/: index.html  tools.html
java-deep-inspector/: build.gradle.kts  settings.gradle.kts
java-deep-inspector/src/main/java/com/androidmcp/inspector/: CoordinateResolver.java  DeviceConnector.java  JsonOutput.java  Main.java  ViewHierarchyDumper.java  ViewNode.java  ViewNodeParser.java
java-deep-inspector/src/test/java/com/androidmcp/inspector/: CoordinateResolverTest.java  JsonOutputTest.java  ViewHierarchyDumperTest.java  ViewNodeParserTest.java
skills/: README.md
skills/design-review/: SKILL.md
skills/design-review/references/: dimensions.md  report-format.md
src/android_mcp/: __main__.py  device_picker.py  device_picker_template.html  jar_path.py
src/android_mcp/layout/: accessibility_provider.py  density.py  jdwp_provider.py  jdwp_runner.py  models.py  provider.py
src/android_mcp/mobile/: service.py  views.py
src/android_mcp/tree/: config.py  service.py  views.py
tests/fixtures/: deep_dump_sample.json  v1_dump_sample.txt
tests/unit/: test_accessibility_provider.py  test_deep_models.py  test_density.py  test_device_picker.py  test_jar_path.py  test_jdwp_provider.py  test_jdwp_runner.py  test_layout.py  test_provider_injection.py
