[project]
name = "android-mcp"
version = "0.2.0"
description = "Lightweight MCP Server for Android Operating System"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { file = "LICENSE" }
urls = { Homepage = "https://github.com/edditz/android-mcp-pro" }
keywords = ["android", "mcp", "mobile", "automation"]
dependencies = [
    "fastmcp>=2.14.0",
    "pillow>=11.2.1",
    "tabulate>=0.9.0",
    "uiautomator2>=3.3.1",
]

[project.scripts]
android-mcp = "android_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
