[project]
name = "android-mcp-pro"
version = "0.2.0"
description = "Lightweight MCP Server for Android Operating System"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { file = "LICENSE" }
urls = { Homepage = "https://github.com/edditz/android-mcp-pro" }
keywords = ["android", "mcp", "mobile", "automation"]
dependencies = [
    "fastmcp>=2.14.0",
    "pillow>=11.2.1",
    "tabulate>=0.9.0",
    "uiautomator2>=3.3.1",
]

[project.scripts]
android-mcp-pro = "android_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The distribution is "android-mcp-pro" but the import package stays "android_mcp",
# so point hatchling at it explicitly (it would otherwise infer src/android_mcp_pro).
[tool.hatch.build.targets.wheel]
packages = ["src/android_mcp"]

# Bundle the prebuilt deep-inspector fat-jar INTO the wheel at
# android_mcp/prebuilt/deep-inspector.jar so --deep works for pip/uvx installs
# (not just source checkouts). resolve_default_jar() looks there first.
[tool.hatch.build.targets.wheel.force-include]
"prebuilt/deep-inspector.jar" = "android_mcp/prebuilt/deep-inspector.jar"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
